Minor changes to team views

--- a/case/s_methods_processes.tex
+++ b/case/s_methods_processes.tex
@@ -118,7 +118,12 @@ There were no clear opinions on how to improve this, but there seemed to be a sh
 % Asiakas ei muista teknistä velkaa
 
 
-\textbf{Common practises.}
+\textbf{Common practices.} There were virtually no forced processes in the development used. The development team found that this partially led to careless behavior in the project. In particular, mutually agreed ground rules about coding practices were wanted. Ideally these rules would act as guidelines for the development and not as a bureaucratic burden.
+
+These practices could include things like a proper definition of done, guidelines for code style and other practices now having differentiated styles among the developers. In addition to helping keep the code uniform, these guidelines would help new and inexperienced developers to become familiar of the practices used by others.
+
+Also one practice in particular was mentioned several times: informal reviews or inspections of each others code. There was some concern about giving negative feedback to other developers. As an improvement to this, there was a suggestion that a mutual agreement would be required that every member of the team would agree to receive both positive and negative feedback, without finding it offensive. Reviews could be done with pull requests or other lightweight tool for automatic reviews.
+
 % Mitä erilailla - Definition of Done selkeämmäksi: testit kuuluu taskiin
 % Mitä erilailla - Rajapinnasta tarkempi määrittely
 % Mitä erilailla - “REST”, mutta muita tapoja seassa
@@ -132,23 +137,27 @@ There were no clear opinions on how to improve this, but there seemed to be a sh
 % Tulevaisuudessa paremmin - Auttaisi jos ja kun porukka vaihtuu
 % Tulevaisuudessa paremmin - kaikki koodarit samojen käytäntöjen alle, myös koodaavat asiakkaat
 
+% Tulevaisuudessa paremmin - laatuasioista “valittaminen” ei henkilökohtaista
+% Tulevaisuudessa paremmin - pitäisi sopia etukäteen, että saa sanoa mistä vaan asiasta loukkaantumatta
+% Tulevaisuudessa paremmin - review, pullrequestit
+% Tulevaisuudessa paremmin - todettu hyviksi nyt kun käytössä (Mainitaan muualla)
 
-\textbf{Project management.}
+
+\textbf{Communication.} In the beginning of the project, good communication helped to achieve good quality of the specifications and delivered features. As the project progressed, communication between the development team and customer was gradually degraded. Later on, communication inside the team was also weakened because a few of the developers were part-time employees with separate working days.
+
+There were no actual proposals for improving the communication between the team and customer. Also no solutions were presented for solving the communicational challenges when working with part-time employees.
+
+
 
 % Kommunikaatio aluksi tae hyvälle laadulle
 % Aluksi ongelmallisin kommunikaatio asiakkaan kanssa
 % Myöhemmin kommunikaatio failannut tiimin sisälläkin, koska osa-aikaisia samassa projektissa
 
-% Tulevaisuudessa paremmin - laatuasioista “valittaminen” ei henkilökohtaista
-% Tulevaisuudessa paremmin - pitäisi sopia etukäteen, että saa sanoa mistä vaan asiasta loukkaantumatta
-% Tulevaisuudessa paremmin - review, pullrequestit
-% Tulevaisuudessa paremmin - todettu hyviksi nyt kun käytössä
 % Tulevaisuudessa paremmin - pitäisi osata sanoa koodaavalle asiakkaalle, että osa siitä aiheuttaa lisätyötä tiimille
 % Tulevaisuudessa paremmin - Kommunikaatioo paremmaksi
 
 
 
-------------------------------------------------------
 
 
 
