Minor changes to phase description. Title changed

--- a/case/s_objectives.tex
+++ b/case/s_objectives.tex
@@ -11,7 +11,7 @@ During the development, a better understanding of the market was achieved. It wa
 
 This understanding of the market was not present when deciding the priorities of the upcoming features, so some of the effort put to reporting and other features could have been allocated to more appealing features.
 
- \section{Team and Phases VAI Project Execution}
+ \section{Project Execution}
 
 The project was divided into multiple phases. In the scope of this thesis, five phases are observed. Each of the phases had predefined objectives and a time frame. The project was executed using agile practices, so the phases were divided in sprints lasting usually a week. A weekly session, with both the development team and the customers present, was arranged in where the previous sprint was reviewed and the next sprint was planned. The contents of the sprints and the backlog were managed with Pivotal Tracker, a tool for agile project management.
 
@@ -63,11 +63,10 @@ No major changes to the quality aspects of the project in the fourth phase. User
 % 		* (Elice)
 
 % Content
-\textbf{Phase five.} In the fifth phase, REFAKTOROINTI?????? TODO-HÄLÄRM!!
-
+\textbf{Phase five.} In the fifth phase, the main focus was in refactoring some critical parts of the application. The most important targets for this was the implementation of presence markings and handling of time zones. In addition, some refactoring was done to others parts and some new features were implemented.
 
 % Time frame, team, budget, new features and bugs, function points
-The fifth phase lasted 32 calendar days. The budget for this phase was around 12\% of the total budget. Three developers, an on-demand UX specialist and a part-time project manager aggregated the team for this phase. Pivotal Tracker contains 5 features and one bug allocated for this phase. The veracity of these numbers can be questioned and it is possible that the usage of the tracker was neglected for this phase. \textbf{TODO!?!} A total of 25 function points were implemented as new source code and after this phase the total function points reached an even 500 function points. 
+The fifth phase lasted 32 calendar days. The budget for this phase was around 12\% of the total budget. Three developers, an on-demand UX specialist and a part-time project manager aggregated the team for this phase. Pivotal Tracker contains 5 features and one bug allocated for this phase. The veracity of these numbers can be questioned and it is possible that the usage of the tracker was neglected with the work done in refactoring the existing implementations. A total of 25 function points were implemented as new source code and after this phase the total function points reached an even 500 function points. 
 
 % Things affecting quality
 Some major refactoring tasks of the application were done in this phase, so the structure of the application was improved. Thus the overall quality of the application should have became higher.
