Changed the thesis title

--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -11,7 +11,7 @@
 \vspace{6.8cm}
  
 \noindent{\bf\large \textsf{Mikko Pohja}}\\
-{\bf\large \textsf{Maximizing quality in a small budget software project}}\\
+{\bf\large \textsf{Maximizing quality in a startup software project}}\\
 \textsf{Master of Science Thesis}
  
 \vspace{8.7cm} % jos kaksi otsikkoriviä vaihda -> 6.7cm
