--- a/case/c_case.tex
+++ b/case/c_case.tex
@@ -1,6 +1,8 @@
 
  \chapter{Case: Päikky}
- 
+
+Maininta siitä, että dataa ei kerätty ptojektin aikana, vaan jälkikäteen
+
 \input{case/s_qa_futurice}
 
 \input{case/s_objectives}
