--- a/case/s_qa_futurice.tex
+++ b/case/s_qa_futurice.tex
@@ -1,11 +1,16 @@
 
  \section{Quality Assurance in Futurice}
 
+
+
+TRUST: smart people make smart decisions
+riski ei realisoidu usein
+
 % Futurice overview
 % No common practises, QA fitted into the situation
 % Lean and Agile
 % Automation
 % Knowledge sharing
 % Communication
-% Maintainability and good structure
+% Maintainability and good structure, "built in" LCM
 % 
