New structure to chapter 2

--- a/DippaLatex.tex
+++ b/DippaLatex.tex
@@ -27,7 +27,7 @@
  % SOFTWARE QUALITY
  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
- \input{quality/c_quality}
+ \input{background/c_background}
 
  
  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
