--- a/background/s_quality_general.tex
+++ b/background/s_quality_general.tex
@@ -1,8 +1,8 @@
-\section{Software Quality in General}
+\section{Software Quality}
 
 Quality is an attribute of the item in question. It is often described as a combination of qualitative and quantitative attributes. Quality is an ambiguous attribute, because it is subjective and thus differs when viewed from different perspectives. The American Society for Quality has two definitions for technical quality: 1. the product's ability to satisfy its needs; 2. the product's lack of deficiencies~\cite{ASQglossary}. Software is one of the most used types of product in human history. At the same time it has one of the highest failure rates of any type of products mainly due to poor quality. With those facts, it is clear that the total influence of low quality software is considerable in both money and time. Still it is a known fact that a common practice to cut costs is reducing the effort used in software quality. Convincing the payer to allow using effort to achieve good quality can be difficult but crucial. The topic is widely researched and the results speak on behalf of quality.
 
-TODO: Ylläolevalle pitäis tehdä jotain 
+TODO: Tästä pitäisi johdatella seuraavaan sisältöön
 
 \subsection{Motivation}
 
