--- a/case/s_methods_processes.tex
+++ b/case/s_methods_processes.tex
@@ -195,3 +195,6 @@ There were no actual proposals for improving the communication between the team 
 
 
 \subsection{Customer and End Users}
+
+
+\subsection{Discussion}
