Removed terms and definitions

--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -86,16 +86,17 @@ olla joko \textit{.eps}- tai \textit{.pdf}-muodossa riippuen \LaTeX-versiosta.
 %\newpage
 %\listoffigures
 %\listoftables
-\newpage
-\chapter*{TERMS AND DEFINITIONS}
- 
-% Näitä ei välttämättä tarvi olla
-\begin{termiluettelo}
- 
-\item [Life cycle] TODO
-\item [Function point] TODO
- 
-\end{termiluettelo} 
+
+% \newpage
+% \chapter*{TERMS AND DEFINITIONS}
+%  
+% % Näitä ei välttämättä tarvi olla
+% \begin{termiluettelo}
+%  
+% \item [Life cycle] TODO
+% \item [Function point] TODO
+%  
+% \end{termiluettelo} 
  
  
 \newpage
