Added discussion. Hit or miss, well see

--- a/case/s_methods_processes.tex
+++ b/case/s_methods_processes.tex
@@ -254,12 +254,20 @@ Third, the customer thinks there could have been more testing in cooperation wit
 
 \subsection{Discussion}
 
-% -Devaajien huomiot negatiivisia, asiakkaan positiivisia
+% -Devaajien huomiot negatiivisia, asiakkaan myös positiivisia
 % -Laatujuttujen eri näkökulmat eroavat: mahdollisesti sopiva tasapaino laatujuttujen ja uuden kehityksen välillä
-% -Viittaus mikkosen artikkeliin
+
+The opinions of the developers differed clearly from the views of the customer and end users. It appears that the attitude towards software quality differs between these groups of stakeholders. Achieving a good balance between assuring good quality and implementing new features can be crucial in building a new product. The customer was confident that in this project, the balance was quite good. 
 % -Riippumatta laatujuttujen puuttumisesta, asiakas saanut toimivan systeemin ja useita asiakkaita sille.
-% -Hyvät devaajat, jotka ylpeitä työstään => riittävä laatu
 % -Testauksella ei olisi saatu kitkettyä puutteita speksissä
 % -Asiakkaan rajallinen ajankäyttö speksien ja juttujen tekemiseen vaikutti osittain negatiivisesti projektiin
+
+In spite of having many negative observations about the quality of the project, the success of the application so far has been good. The customer has gotten several new clients with pleased end users, which matters more than the perceived quality in the project. As there was no single big issue impairing the quality of the project, fixing multiple issues would have taken significant effort. With this effort, the pace of delivering new features could have been compromised. Using more effort on testing could have prevented some defects, but as some of the defects were caused by incomplete specifications, there would have been defects present after proper testing. In any case, some of the problems with quality were caused by the lack of resources of the customer, so perfect quality could not be reached.
+
+% -Hyvät devaajat, jotka ylpeitä työstään => riittävä laatu
+
+An estimate about the sufficient quality achieved in the project was that having a team of developers with high motivation and a desire of being proud of their own work will produce decent quality for the resources in use. 
+
+% -Viittaus mikkosen artikkeliin
 % -Kritiikki asiakkaan osallistumisesta koodaukseen => kuitenkin pakko, että pääsee sisään toiminnallisuuteen
 % -
