Pumped some LSD to veins

--- a/books.bib
+++ b/books.bib
@@ -86,5 +86,13 @@ title = {Desk Check Guide},
 url = {https://sites.google.com/a/campioncollege.com/it_eveningschoool/problem-solving-and-programming/desk-check-guide}
 }
 
-
+@book{poppendieck2006implementing,
+  title={Implementing Lean Software Development: From Concept to Cash},
+  author={Poppendieck, M. and Poppendieck, T.},
+  isbn={9780133812848},
+  series={Addison-Wesley Signature Series (Beck)},
+  url={http://books.google.fi/books?id=RTt9AgAAQBAJ},
+  year={2006},
+  publisher={Pearson Education}
+}
 
