--- a/background/s_startup.tex
+++ b/background/s_startup.tex
@@ -19,19 +19,26 @@ There are five principles in Lean Startup:
 
 \textbf{Validated learning.} Startups exist primarily for learning how to build a sustainable business. This learning can be validated using frequent experiments for testing the vision.
 
-\textbf{Build-Measure-Learn.} The main function of a startup is to turn ideas into products, measure the customer response and then learn whether to pivot or persevere. All successful startup processes should be aimed to accelerate the feedback loop.
+\textbf{Build-Measure-Learn.} The main function of a startup is to turn ideas into products, measure the customer response and then learn whether to pivot or persevere. All successful startup processes should be aimed to accelerate the feedback loop shown in Figure~\ref{fig:feedback-loop}
 
 \textbf{Innovation accounting.} Improving the outcome of entrepreneurs and holding innovators accountable means focusing on measuring the progress, setting milestones and prioritizing work. This requires new kind of accounting designed for startups.
+
+\begin{figure}[t]
+\begin{center}
+\includegraphics[width=0.5\textwidth]{image/feedback-loop.png}
+\end{center}
+\caption{Build-Measure-Learn feedback loop}
+\label{fig:feedback-loop}
+\end{figure}
 
 % -Datan keruu \& oppiminen
 
 ~\cite{ries2011lean}
 
- \subsection{Life Cycle of a Lean Startup}
+ \subsection{Life Cycle in Lean Startup}
+
  
  The life cycle in a Lean startup software development doesn't match to the traditional life cycle of a software product. In building a successive product for a software startup, there are usually multiple short iterations surveying the context in which the product will be used. Building a software startup can be started without knowing what the customers want or even who the customers are, so the life cycle of the product has to be built from multiple consecutive version with significant and rapid changes for conforming to the customers demands.
-
-KUVA. BUILD-MEASURE-LEARN
 
 The basic repeating process of development in Lean Startup begins from an idea. This idea contains usually several hypotheses about the customer behavior or the context of usage. Some of these are called leap of faith assumptions, which are the riskiest hypotheses of the plan. Using these hypotheses for validated learning, allows avoiding much of the waste usually present in startups. To utilize the validated learning as a scientific method, there needs to be a selected group of hypotheses to test. The leap of faith assumptions should be the first ones to be tested, because they are the foundation on which the business is to be built. Testing the first hypotheses can be sometimes done with virtually nothing built. This has been done for example by the founder of the online shoe store Zappos, who sold the first pairs of shoes without having any inventory of his own but only some pictures of shoes taken in local shops.
 
