Introduction to the evaluation of QA in startups

--- a/qa_startup/s_evaluation.tex
+++ b/qa_startup/s_evaluation.tex
@@ -1,6 +1,47 @@
 
  \section{Evaluation of QA Methods}
+
+Quality assurance in a startup environment differs from the QA activities in traditional software development. This is because the requirements and goals of a startup project are usually considerably different from a traditional software projects. Furthermore, even the term software quality can be partially redefined for a better fit in a software startup. Eric Ries describes that the development of Minimum Viable Products questions the traditional notions of quality and this is the most vexing aspects of the development. TODO: Viite
  
+ \subsection{Quality in a Startup project}
+
+% p. 107-110
+
+% Laatu painottuu startupissa siihen, mitä asiakkaat ja loppukäyttäjät pitävät tärkeänä
+% Laadun merkitys elinkaaren eri vaiheissa muuttuu
+%	-Aluksi tärkeintä validoida featuret ja idea
+%	-Laadussa tärkeää aluksi hyvä muokattavuus, refaktoroinnit, asiakkaalle kriittisten osien testaus
+%	-Elinkaaren alussa ei väliä matalan prioriteetin bugeilla tai featureiden vajaalla toiminnalla
+%	-Kun idea alkaa olla validoitu, muuttuu laadun merkitys tuotteistuksen yhteydessä
+%	-Laatuun on käytössä myöhemmin enemmän resursseja, koska asiakkaita alkaa olla
+%	-Osuiskohan tähän Lean Startupin skaalausvaihe
+
+
+
+
+
+
+% Quality p.106-110
+% MVP voi olla "low-quality", jos rakennetaan "high-quality" tuotetta
+% Asiakkaan mielestä MVP voi olla low quality, mutta siitä voidaan oppia mistä ominaisuuksista asiakas pitää
+% "If we dont know who the customer is, we do not know what quality is"
+% 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 MILLÄ MENESTYKSELLÄ TEHDÄÄN JA KUINKA SOPII TÄHÄN SCOPEEN
 
 
@@ -28,9 +69,20 @@ PREVENTIVE
 
  \end{itemize}
  
- \subsection{Methods in Different Phases of the Life Cycle}
+ \subsection{Building Quality In}
+
+%http://books.google.fi/books?id=RTt9AgAAQBAJ&lpg=PA27&ots=PXXKjr2e_E&dq=%22According%20to%20Shigeo%20Shingo%2C%20there%20are%20two%20kinds%20of%20inspection%22&pg=PA29#v=onepage&q&f=false
+% In Lean Software Development, the goal is to build quality into the code from the start, not test it in later. Dont focus on putting defects into a tracking system, you avoid creating defects in the first place. It takes a higly disciplined organization to do that. p26
+% There are two kinds of inspections, inspection after defects occur and inspection to prevent defects. If you really want quality, you don't inspect after the fact, you control conditions so as not to allow defects in the first place. If this is not possible, the you inspect the product after each small stemp, so that defects are caught immediately after they occur. When a defect is found, you stop the line, find its cause and fix it immediately. p.27
+% Defect tracking systems are queues of partially done work, queues of rework. In Lean, queues are collection points for waste.
+
+
+
+{poppendieck2006implementing} 
+
+ \subsection{Pretest defect removal}
  
- \subsection{Point of Diminishing Returns}
+ \subsection{Testing}
  
  \subsection{The Don'ts - Things To Avoid}
  
