--- a/qa_startup/s_evaluation.tex
+++ b/qa_startup/s_evaluation.tex
@@ -2,10 +2,25 @@
  \section{Evaluation of QA Methods}
 
 Quality assurance in a startup environment differs from the QA activities in traditional software development. This is because the requirements and goals of a startup project are usually considerably different from a traditional software projects. Furthermore, even the term software quality can be partially redefined for a better fit in a software startup. Eric Ries describes that the development of Minimum Viable Products questions the traditional notions of quality and this is the most vexing aspects of the development. TODO: Viite
- 
+
+% Cost of owning a mess Clean Code p. 4
+
  \subsection{Quality in a Startup project}
 
-% p. 107-110
+% Lean Startup: p. 107-110
+In the beginning of the chapter about role of quality, Eric Ries states that "The best professionals and craftpersons alike aspire to build quality products; it is a point of pride". This is a good summary about the attitude towards software quality in many movements about modern software development. Measuring and defining quality in modern software projects with constant changes and uncertainty can be difficult, but the development personnel should have the pursuit for high quality.
+
+Ries tells that modern production processes seek to boost efficiency by relying to high quality. The belief that the customer is the most important part of the production process means that all effort should be focused to producing results that the customer finds valuable. This view can be beneficial in an environment where the company knows the opinions of customers. However, in a startup development, assuming the opinions of customers is a risky thing to do. Often in the startup, it is not even sure who the customer is. Thus, Ries introduces a quality principle for startups: "If we do not know who the customer is, we do not know what quality is".
+
+In a startup developing an MVP, the quality of the product can be a fluid concept. Even if the quality of MVP is low for customers, it can bring great value in building a high-quality product. If the customers find the product low on quality, this can be used as an opportunity to learn what customers care about. This is infinitely better than mere speculation, because it provides empirical information on which to build future products.
+
+When working with a 3D chat software called IMVU, Ries and his colleagues decided to leave a critical sophisticated feature done with only minimum effort. They were embarrassed to release the moving of the avatars without any animations or other modern visualizations. The avatars just reappeared to another location. The response of the customers was surprising as the customers were thrilled from the new feature, which allowed an immediate change of location without waiting. From the customers point of view, the released feature was more appropriate than the option which would take more time and money to implement. In the end, the quality of the released feature was probably higher than the one planned. The lesson behind the story is that customers do not care how much time something takes to build.
+
+Lean Startup method is aiming for the goal of winning over customers and not opposed to building high-quality products. Thus, it is necessary to set aside some professional standards to enable the validated learning as soon as possible. This is not supposed to allow operating in an undisciplined manner. This is important as there are some quality problems that can slow down the Build-Measure-Learn feedback loop. In addition, defects complicate the evolution of the product and interfere with the ability to learn. Helping the development of the MVP means removing any feature, process or effort that does not lead directly to the learning sought.
+
+Another view of the software quality applicable to a startup environment is described in the Lean Software Development method.~\cite{poppendieck2003LSD}
+
+% LSD: p. 16-
 
 % Laatu painottuu startupissa siihen, mitä asiakkaat ja loppukäyttäjät pitävät tärkeänä
 % Laadun merkitys elinkaaren eri vaiheissa muuttuu
