Some pretty significant improvement. No idea what

--- a/case/s_methods_processes.tex
+++ b/case/s_methods_processes.tex
@@ -262,7 +262,7 @@ The opinions of the developers differed clearly from the views of the customer a
 % -Testauksella ei olisi saatu kitkettyä puutteita speksissä
 % -Asiakkaan rajallinen ajankäyttö speksien ja juttujen tekemiseen vaikutti osittain negatiivisesti projektiin
 
-In spite of having many negative observations about the quality of the project, the success of the application so far has been good. The customer has gotten several new clients with pleased end users, which matters more than the perceived quality in the project. As there was no single big issue impairing the quality of the project, fixing multiple issues would have taken significant effort. With this effort, the pace of delivering new features could have been compromised. Using more effort on testing could have prevented some defects, but as some of the defects were caused by incomplete specifications, there would have been defects present after proper testing. In any case, some of the problems with quality were caused by the lack of resources of the customer, so perfect quality could not be reached.
+In spite of having many negative observations about the quality of the project, the success of the application so far has been good. The customer has gotten several new clients with pleased end users, which matters more than the perceived quality in the project. As there was no single big issue impairing the quality of the project, fixing multiple issues would have taken significant effort. With this effort, the pace of delivering new features could have been compromised. Using more effort on testing could have prevented some defects, but as some of the defects were caused by incomplete specifications, there would have been defects present after proper testing. In any case, some of the problems with quality were caused by the lack of time of the customer, so perfect quality could not be reached.
 
 % -Hyvät devaajat, jotka ylpeitä työstään => riittävä laatu
 
