Added LSD by Bopping Dick

--- a/books.bib
+++ b/books.bib
@@ -96,3 +96,11 @@ url = {https://sites.google.com/a/campioncollege.com/it_eveningschoool/problem-s
   publisher={Pearson Education}
 }
 
+@book{poppendieck2003LSD,
+ author = {Poppendieck, Mary and Poppendieck, Tom},
+ title = {Lean Software Development: An Agile Toolkit},
+ year = {2003},
+ isbn = {0321150783},
+ publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+ address = {Boston, MA, USA},
+} 
