Added quality definition by LSD

--- a/books.bib
+++ b/books.bib
@@ -103,4 +103,14 @@ url = {https://sites.google.com/a/campioncollege.com/it_eveningschoool/problem-s
  isbn = {0321150783},
  publisher = {Addison-Wesley Longman Publishing Co., Inc.},
  address = {Boston, MA, USA},
-} 
+}
+
+@book{clark1991product,
+  title={Product Development Performance: Strategy, Organization, and Management in the World Auto Industry},
+  author={Clark, K.B. and Fujimoto, T.},
+  isbn={9780875842455},
+  lccn={90047967},
+  url={http://books.google.fi/books?id=7cCAASTW6IQC},
+  year={1991},
+  publisher={Harvard Business School Press}
+}
